--- a/code/estilo.css
+++ b/code/estilo.css
@@ -38,5 +38,7 @@ header .song--panel{
 header .Play--music{
     width: 100%;
     height: 10%;
-    background-color: #000009;
+    background-color: #254466;
+    opacity: 0.5;
+    border-radius: 5px;
 }
