--- a/code/estilo.css
+++ b/code/estilo.css
@@ -20,6 +20,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     overflow: hidden;
+    color: #fff;
 
 }
 header .menu--panel,.song--panel{
@@ -98,4 +99,52 @@ header .menu--panel .Playlist .Activo--boostrap span{
 header .menu--panel .Playlist .Activo--boostrap .bi{
     display: flex;
     margin-right: 30px;
+}
+header .menu--panel .menu--songs{
+    width: 100%;
+    height: 298px;
+    border: 1px solid #fff;
+    margin-top: 20px;
+}
+header .menu--panel .menu--songs li{
+    padding: 5px 0 5px 20px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    cursor: pointer;
+    position: relative;
+    transition: .3s linear;
+}
+header .menu--panel .menu--songs li:hover{
+    background-color: #406486 ;
+}
+header .menu--panel .menu--songs li span{
+    font-size: 12px;
+    font-weight: 400;
+    color: #ffff;
+}
+header .menu--panel .menu--songs li img{
+    width: 32px;
+    height: 32px;
+    margin: 0;
+    margin-left: 15px;
+}
+header .menu--panel .menu--songs li h5{
+    font-size: 13px;
+    margin-left: 30px;
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+header .menu--panel .menu--songs li h5 .subTitle{
+    font-size: 10px;
+    color: #777;
+}
+header .menu--panel .menu--songs li .bi{
+    font-size: 20px;
+    color: #fdfdfd;
+    position: absolute;
+    left: 220px;
+    top: 10px
 }
