--- a/code/estilo.css
+++ b/code/estilo.css
@@ -228,10 +228,52 @@ header .Play--music .icon--play .bi{
 }
 header .Play--music span{
     margin-left: 25px;
-    font-weight: 500;
-    width: 34px;
+    font-weight: 300;
+    width: 32px;
+    align-self: center;
 }
 header .Play--music #StartItems{
-    margin: 5px 25px;
+    margin: 0px 15px;
+}
+header .Play--music .Bar__music{
+    display: flex;
+    align-items: center;
+    width: 32%;
+    height: 3px;
+    background-color: #254466;
+    position: relative;
+    margin: 0 2px 3px 2px;
 }
 
+header .Play--music .Bar__music .bar__music2{
+    position: absolute;
+    width: 20%;
+    height: 100%;
+}
+header .Play--music .Bar__music .dotted{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: #619CDB;
+    border-radius: 50%;
+    transition: .1s linear;
+}
+header .Play--music .Bar__music .dotted::before{
+    content: '';
+    width: 15px;
+    height: 15px;
+    border: 1px solid #9383EC;
+    border-radius: 50%;
+    position: absolute;
+    left: -1px;
+    top: -1px;
+    box-shadow: 0 0 10px #777;
+}
+header .Play--music .Bar__music input{
+    width: 400px;
+    cursor: pointer;
+    position: absolute;
+    z-index: 99999;
+    transition: .1s linear;
+    opacity: 0;
+}
