--- a/code/estilo.css
+++ b/code/estilo.css
@@ -238,7 +238,7 @@ header .Play--music #StartItems{
 header .Play--music .Bar__music{
     display: flex;
     align-items: center;
-    width: 32%;
+    width: 45%;
     height: 3px;
     background-color: #254466;
     position: relative;
@@ -279,12 +279,52 @@ header .Play--music .Bar__music input{
 }
 header .Play--music .vol__music{
     position: relative;
-    width: 15%;
-    height: 3px;
+    width: 160px;
+    height: 2px;
     background-color: #254466;
-    margin-left: 80px;
+    margin-left: 50px;
 }
-header .Play--music .vol__music .Bar__vol{
+header .Play--music .vol__music .bi{
     position: absolute;
+    font-size: 20px;
+    top: -10px;
+    left: 0;
+}
+header .Play--music .vol__music input{
+    width: 160px;
+    cursor: pointer;
+    position: absolute;
+    z-index: 99999;
+    top: -7px;
+    left: 20px;
+    transition: .1s linear;
+    opacity: 0;
     
+    
+}
+header .Play--music .vol__music .bar__vol2{
+    position: absolute;
+    width: 20%;
+    height: 100%;
+}
+header .Play--music .vol__music .dotted__music{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: #619CDB;
+    border-radius: 50%;
+    transition: .1s linear;
+    left: 20px;
+    top: -6px;
+}
+header .Play--music .vol__music .dotted__music::before{
+    content: '';
+    width: 15px;
+    height: 15px;
+    border: 1px solid #9383EC;
+    border-radius: 50%;
+    position: absolute;
+    left: -1px;
+    top: -1px;
+    box-shadow: 0 0 10px #777;
 }
