--- a/code/estilo.css
+++ b/code/estilo.css
@@ -34,8 +34,7 @@ header .menu--panel,.song--panel{
 }
 header .song--panel{
     width: 75%;
-    background-color: #619CDB;
-    opacity: 0.3;
+    background-color:  #070B66 ;
 }
 header .Play--music{
     width: 100%;
@@ -328,3 +327,90 @@ header .Play--music .vol__music .dotted__music::before{
     top: -1px;
     box-shadow: 0 0 10px #777;
 }
+header .song--panel {
+    z-index: 2;
+}
+header .song--panel nav{
+    width: 95%;
+    height: 12%;
+    border: 1px solid #fff;
+    margin: auto;
+    margin-top: 8px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+header .song--panel nav ul{
+    display: flex;
+    list-style: none;
+    align-items: start;
+    margin: 5px 25px;
+}
+header .song--panel nav ul li{
+    margin: 25px;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #fff;
+    cursor: pointer;
+    transition: .1s linear;
+}
+header .song--panel nav ul li:hover{
+    color: #ea3;
+}
+header .song--panel nav ul li:nth-child(1){
+    border-bottom: 2px solid #666;
+}
+header .song--panel nav ul li:nth-child(1):hover{
+    color: #ea3;
+    border-bottom: 2px solid #987;
+}
+header .song--panel nav .search{
+    position: relative;
+    width: 40%;
+    border-radius: 20px;
+    top: -2px;
+}
+header .song--panel nav .search::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #111;
+    backdrop-filter: blur(5px);
+    z-index: -1;
+}
+header .song--panel nav .search .bi{
+    font-size: 14px;
+    padding: 5px 5px 5px 5px;
+}
+header .song--panel nav .search input{
+    background: none;
+    outline: none;
+    border: none;
+    padding: 5px 12px;
+    color: #fff;
+    font-size: 13px;
+}
+header .song--panel nav .search input::placeholder{
+    color: #fff;
+    text-transform: capitalize;
+}
+header .song--panel nav .User--page{
+    margin: auto;
+    margin-top: 7px;
+    margin-left: 80px;
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    align-self: center;
+}
+header .song--panel nav .User--page img{
+    width: 35px;
+    height: 35px;
+    filter: brightness(1,1);
+    filter: drop-shadow(0 0 20px #fff);
+    border-radius: 40px;
+}
+
+
