--- a/code/estilo.css
+++ b/code/estilo.css
@@ -492,14 +492,13 @@ header .song--panel .Buttons--sing button:nth-child(2):hover{
 header .song--panel .Popular__songs{
     width: 95%;
     height: auto;
-    border: 1px solid #fff;
     margin: 5px 20px;
 }
 header .song--panel .Popular__songs .Title__h4{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-right: 45px;
+    margin-right: 25px;
 }
 header .song--panel .Popular__songs .Title__h4 h4{
     color: #ea3;
@@ -522,9 +521,11 @@ header .song--panel .Popular__songs .Title__h4 .Btn__icon .bi:hover{
 }
 header .song--panel .Popular__songs .Music{
     width: 100%;
-    height: 125px;
+    height: 135px;
     display: flex;
+    gap: 12px;
     overflow-x: auto;
+    overflow-y: auto;
     scroll-behavior: smooth;
 }
 header .song--panel .Popular__songs .Music::-webkit-scrollbar{
@@ -534,7 +535,7 @@ header .song--panel .Popular__songs .Music li{
     min-width: 95px;
     height: 95px;
     list-style: none;
-    margin-left: 15px;
+    margin-left: 5px;
     position: relative;
     top: -12px;
     transition: .3s linear;
@@ -551,14 +552,6 @@ header .song--panel .Popular__songs .Music li .Imagen__play{
     justify-content: center;
     text-align: center;
 }
-header .song--panel .Popular__songs .Music li .Imagen__play{
-    position: relative;
-    width: 90px;
-    height: 90px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 header .song--panel .Popular__songs .Music li .Imagen__play img{
     position: relative;
     width: 100%;
@@ -566,6 +559,10 @@ header .song--panel .Popular__songs .Music li .Imagen__play img{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+header .song--panel .Popular__songs .Music li  h5{
+    text-wrap: nowrap;
+    text-align: left;
 }
 header .song--panel .Popular__songs .Music li .Imagen__play .bi{
     position: absolute;
@@ -590,4 +587,37 @@ header .song--panel .Popular__songs .Music h5{
 header .song--panel .Popular__songs .Music h5 .subtitle{
     font-size: 10px;
 }
+header .song--panel .Popular__songs .Sing__popular{
+    position: relative;
+    margin:2px 0px;
+    top: -30px;
+    font-size: 12px;
+}
+header .song--panel .Popular__songs .Artists{
+    width: 100%;
+    height: 55px;
+    display: flex;
+    padding: 5px;
+    justify-content: left;
+    position: relative;
+    top: -35px;
+    
+}
+header .song--panel .Popular__songs .Artists::-webkit-scrollbar{
+    display: flex;
+}
+header .song--panel .Popular__songs .Artists img{
+    border: 1px solid #000;
+    width: 90px;
+    height: 100%;
+    border-radius: 50%;
+    margin-left: 15px;
+    outline: none;
+    cursor: pointer;
+    transition: .3s linear;
+}
+header .song--panel .Popular__songs .Artists img:hover{
+    box-shadow: 2px 2px 10px #111;
+}
+
 
