--- a/code/estilo.css
+++ b/code/estilo.css
@@ -14,7 +14,7 @@ body{
 }
 header{
     width: 95%;
-    height: 80%;
+    height: 95%;
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -341,7 +341,7 @@ header .song--panel::before{
     background: url("../imagen/deiVfoto");
     background-position: right;
     background-repeat: no-repeat;
-    top: 30px;
+    top: 40px;
     left: -135px;
 }
 header .song--panel nav{
@@ -492,13 +492,13 @@ header .song--panel .Buttons--sing button:nth-child(2):hover{
 header .song--panel .Popular__songs{
     width: 95%;
     height: auto;
-    margin: 5px 20px;
+    margin: 12px 15px;
 }
 header .song--panel .Popular__songs .Title__h4{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-right: 25px;
+    margin-right: 15px;
 }
 header .song--panel .Popular__songs .Title__h4 h4{
     color: #ea3;
@@ -507,7 +507,7 @@ header .song--panel .Popular__songs .Title__h4 h4{
     margin-left: 10px;
 }
 header .song--panel .Popular__songs .Title__h4 .Btn__icon{
-    margin: 5px;
+    margin: 2px;
 }
 header .song--panel .Popular__songs .Title__h4 .Btn__icon .bi{
     color: #fff;
@@ -524,12 +524,13 @@ header .song--panel .Popular__songs .Music{
     height: 135px;
     display: flex;
     gap: 12px;
+    position: relative;
+    top: 5px;
     overflow-x: auto;
-    overflow-y: auto;
     scroll-behavior: smooth;
 }
 header .song--panel .Popular__songs .Music::-webkit-scrollbar{
-    display: flex;
+    display: none;
 }
 header .song--panel .Popular__songs .Music li{
     min-width: 95px;
@@ -589,35 +590,62 @@ header .song--panel .Popular__songs .Music h5 .subtitle{
 }
 header .song--panel .Popular__songs .Sing__popular{
     position: relative;
-    margin:2px 0px;
-    top: -30px;
+    margin: 5px 2px;
+    top: -20px;
     font-size: 12px;
 }
 header .song--panel .Popular__songs .Artists{
     width: 100%;
-    height: 55px;
+    height: 120px;
+    margin-top: 2px;
     display: flex;
     padding: 5px;
     justify-content: left;
     position: relative;
-    top: -35px;
-    
+    top: -30px;
+    gap: 10px;
+    overflow-x: auto;
+    scroll-behavior: smooth;
 }
 header .song--panel .Popular__songs .Artists::-webkit-scrollbar{
+    display: none;
+}
+
+header .song--panel .Popular__songs .Artists .Btn__icon .bi{
+    margin: 2px 15px;
+    
+}
+header .song--panel .Popular__songs .Artists li{
+    position: relative;
+    list-style: none;
+    width: 65%;
+    height: 120px;
+    padding: 5px;
+    top: 3px;
+}
+header .song--panel .Popular__songs .Artists li .Imagen__play{
+    position: relative;
+    top: 0;
     display: flex;
+    gap: 12px;
 }
 header .song--panel .Popular__songs .Artists img{
-    border: 1px solid #000;
-    width: 90px;
+    width: 75px;
     height: 100%;
     border-radius: 50%;
-    margin-left: 15px;
-    outline: none;
+    outline: 2px solid #000;
+    outline-offset: 2px;
+    margin-left: 5px;
     cursor: pointer;
     transition: .3s linear;
 }
+header .song--panel .Popular__songs .Artists h5{
+   text-align: center;
+   text-wrap: nowrap;
+}
 header .song--panel .Popular__songs .Artists img:hover{
-    box-shadow: 2px 2px 10px #111;
+    box-shadow: 2px 2px 10px #fff;
+    outline-color: #9383EC;
 }
 
 
