--- a/code/estilo.css
+++ b/code/estilo.css
@@ -58,7 +58,7 @@ header .menu--panel .Playlist h3{
     font-size: 12px;
     letter-spacing: 1.5px;
     font-weight: 400;
-    padding: 5px 4px;
+    padding: 5px 2px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -100,20 +100,16 @@ header .menu--panel .Playlist .Activo--boostrap .bi{
     margin-right: 30px;
 }
 header .menu--panel .menu--songs{
-    width: 100%;
-    height: 275px;
-    /**/
-    margin-top: 25px;
-    border-radius: 10px;
+    margin-top: 45px;
+    border-radius: px;
 }
 header .menu--panel .menu--songs li{
     padding: 5px 0 5px 20px;
     list-style: none;
     display: flex;
+    cursor: pointer;
     align-items: center;
     margin-bottom: 15px;
-    cursor: pointer;
-    position: relative;
     transition: .3s linear;
 }
 header .menu--panel .menu--songs li:hover{
@@ -127,13 +123,12 @@ header .menu--panel .menu--songs li span{
 header .menu--panel .menu--songs li img{
     width: 32px;
     height: 32px;
-    margin: 0;
     filter: drop-shadow(2px 1px 15px #555);
-    margin-left: 15px;
+    margin-left: 10px;
 }
 header .menu--panel .menu--songs li h5{
     font-size: 11px;
-    margin-left: 30px;
+    margin-left: 10px;
     color: #fff;
     font-weight: 300;
     letter-spacing: 1px;
@@ -144,11 +139,11 @@ header .menu--panel .menu--songs li h5 .subTitle{
     color: #777;
 }
 header .menu--panel .menu--songs li .bi{
-    font-size: 20px;
+    font-size: 15px;
     color: #fdfdfd;
     position: absolute;
+    cursor: pointer;
     left: 250px;
-    top: 8px
 }
 header .Play--music{
     display: flex;
@@ -162,7 +157,6 @@ header .Play--music .Waves{
     padding: 0 0 5px 0;
     display: flex;
     align-items: flex-end;
-    animation: unset;
 }
 header .Play--music .Waves .Wave1{
     width: 7px;
@@ -172,18 +166,28 @@ header .Play--music .Waves .Wave1{
     border-radius: 10px 10px 0 0;
     margin: 0 3px 2px 3px;
     padding: 1px;
-    animation: wave .4s linear infinite 0.1s;
+    animation: Waves .5s linear infinite 0.1s;
     animation: unset;
 }
 header .Play--music .Waves .Wave1:nth-child(2){
     height: 16px;
-    animation-delay: .6s;
+    
 }
 header .Play--music .Waves .Wave1:nth-child(3){
     height: 1px;
+}
+
+/* Event*/
+header .Play--music .active .Wave1{
+    animation: Waves .5s linear infinite 0.1s;
+}
+header .Play--music .active .Wave1:nth-child(2){
+    animation-delay: .4s;
+}
+header .Play--music .active .Wave1:nth-child(3){
     animation-delay: .8s;
 }
-@keyframes wave{
+@keyframes Waves{
     0%{
         height: 5px;
     }
