--- a/code/estilo.css
+++ b/code/estilo.css
@@ -243,16 +243,17 @@ header .Play--music .Bar__music{
     display: flex;
     align-items: center;
     width: 45%;
-    height: 3px;
     background-color: #254466;
+    height: 3px;
     position: relative;
     margin: 0 10px 3px 2px;
 }
 
 header .Play--music .Bar__music .bar__music2{
     position: absolute;
-    width: 20%;
+    width: 100%;
     height: 100%;
+    background-color: #ea3;
 }
 header .Play--music .Bar__music .dotted{
     position: absolute;
