--- a/code/estilo.css
+++ b/code/estilo.css
@@ -556,41 +556,37 @@ header .song--panel .Popular__songs .Music li:hover{
 }
 header .song--panel .Popular__songs .Music li .Imagen__play{
     position: relative;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    gap: 15px;
 }
 header .song--panel .Popular__songs .Music li .Imagen__play img{
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 95px;
     border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 header .song--panel .Popular__songs .Music li  h5{
     text-wrap: nowrap;
-    text-align: left;
+    text-align: center;
     font-size: 11px;
 }
 header .song--panel .Popular__songs .Music li .Imagen__play .bi{
     position: absolute;
     cursor: pointer;
     font-size: 20px;
-    color: #bbb;
+    color: #aaa;
     transition: .3s linear;
-    opacity: 0.2;
+    opacity: 0;
 }
 header .song--panel .Popular__songs .Music li .Imagen__play:hover .bi{
     opacity: 1;
 }
 header .song--panel .Popular__songs .Music h5{
     text-align: center;
-    padding: 1px;
     line-height: 15px;
     font-size: 12px;
     color: #aaa;
@@ -598,7 +594,7 @@ header .song--panel .Popular__songs .Music h5{
     letter-spacing: 1px;
 }
 header .song--panel .Popular__songs .Music h5 .subtitle{
-    font-size: 10px;
+    font-size: 9px;
 }
 header .song--panel .Popular__songs .Sing__popular{
     position: relative;
